@@ -31,7 +31,7 @@
 
 #define DEFAULT_DEVICE		"/dev/lcd"
 #define DEFAULT_BACKLIGHT	1
-#define DEFAULT_BRIGHTNESS	200
+#define DEFAULT_BRIGHTNESS	700
 
 #define DEFAULT_CELL_WIDTH_1602		5
 #define DEFAULT_CELL_WIDTH_12232	6
